[pluto] - fixed label positioning and wrap width in schematic

--- a/pluto/src/text/Editable.css
+++ b/pluto/src/text/Editable.css
@@ -14,6 +14,7 @@
     user-select: text;
     -webkit-user-select: text;
     padding: 0.25rem 0;
+    box-sizing: content-box;
 
     &:focus {
         border: var(--pluto-border-width) solid var(--pluto-primary-z);
